[channel-typing-indicators] fix indicator invisible

--- a/plugins/channel-typing-indicators/styles.jsx.scss
+++ b/plugins/channel-typing-indicators/styles.jsx.scss
@@ -5,7 +5,7 @@
         width: 6px;
         float: left;
         margin: 0 1px;
-        background-color: var(--text-normal);
+        background-color: var(--text-default);
         display: block;
         border-radius: 50%;
         opacity: 0.3;
